@@ -1,3 +1,9 @@
+2011-08-31  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/plugs/multibitrate/multibitrate.py:
+	* flumotion/component/plugs/multibitrate/multibitrate.xml:
+	Allow sorting playlist entries by target bitrate or user agent
+
 2011-08-29  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/consumers/applestreamer/hlsring.py:
